services/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-intercept-errors: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m" 
spec:
  ingressClassName: "nginx"
  tls:
  - secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /logistica
            pathType: Prefix
            backend:
              service:
                name: logistica
                port:
                  number: 80
          - path: /compras
            pathType: Prefix
            backend:
              service:
                name: ms-compras-service
                port:
                  number: 80
          - path: /inventarios
            pathType: Prefix
            backend:
              service:
                name: ms-inventarios-service
                port:
                  number: 80
          - path: /pedidos
            pathType: Prefix
            backend:
              service:
                name: pedidos
                port:
                  number: 80
          - path: /ventas
            pathType: Prefix
            backend:
              service:
                name: ventas
                port:
                  number: 80
